--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.5",
+    "mem": "^5.1.1",
     "merge-graphql-schemas": "^1.7.0",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
